<resources>
    <string name="empty"/>
    <string name="app_name">&appname;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_avatar_desc">Your GPSies avatar</string>
    <string name="nav_import_tracks">Import Tracks</string>
    <string name="nav_login_register">Login/Register</string>
    <string name="nav_gps_status">GPS Status</string>
    <string name="nav_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="select_storage">Select storage device</string>
    <string name="device">Device</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="placeholder_128_5GB">128.5GB</string>
    <string name="storage_error">Storage error</string>
    <string name="storage_not_mounted">The configured storage device is not mounted! Please remount the device or reconfigure storage\n\nWould you like to reconfigure storage?</string>
    <string name="storage_initialization_failed">Failed to initialize storage! Please verify that the device has free space available or reconfigure storage\n\nWould you like to reconfigure storage?</string>
    <string name="storage_device_changed">The configured storage device has been replaced! Please re-insert it or reconfigure storage\n\nWould you like to reconfigure storage?</string>
    <string name="storage_adopted_storage_unsupported">Adopted internal storage is not supported because there are severe issues with that type of storage\n\nPlease move %1$s back to internal storage</string>
    <string name="storage_internal">Internal</string>
    <string name="storage_external">External</string>
    <string name="storage_space_warning">Storage space warning</string>
    <string name="storage_space_requirements">You don\'t have a sdcard installed or you chose internal storage as storage device.\n\nIt\'s not uncommon for this app to require more than 1Gb of space depending on the downloaded maps and the number of stored tracks</string>
    <string name="key_storage_directory" translatable="false">storage_directory</string>
    <string name="key_cache_directory" translatable="false">cache_directory</string>
    <string name="key_storage_import_directory" translatable="false">storage_import_directory</string>
    <string name="key_storage_uuid" translatable="false">storage_uuid</string>
    <string name="key_storage_cache_directory" translatable="false">storage_cache_directory</string>
    <string name="key_storage_map_directory" translatable="false">storage_map_directory</string>
    <string name="key_storage_user_directory" translatable="false">storage_user_directory</string>
    <string name="key_storage_render_theme_directory" translatable="false">storage_render_theme_directory</string>
    <string name="key_last_known_location_latitude" translatable="false">last_known_location_latitude</string>
    <string name="key_last_known_location_longitude" translatable="false">last_known_location_longitude</string>
    <string name="key_last_known_location_time" translatable="false">last_known_location_time</string>
    <string name="key_ask_to_enable_gps" translatable="false">ask_to_enable_gps</string>
    <string name="key_ask_to_resolve_play_services_unavailability" translatable="false">ask_to_resolve_play_services_unavailability</string>
    <string name="key_map_preferences" translatable="false">map_preferences</string>
    <string name="key_map_use_online_map" translatable="false">map_use_online_map</string>
    <string name="key_map_offline_map" translatable="false">map_offline_map</string>
    <string name="key_map_online_map" translatable="false">map_online_map</string>
    <string name="key_map_use_internal_render_theme" translatable="false">map_use_internal_render_theme</string>
    <string name="key_map_internal_render_theme" translatable="false">map_internal_render_theme</string>
    <string name="key_map_external_render_theme" translatable="false">map_external_render_theme</string>
    <string name="key_map_render_theme_style" translatable="false">map_render_theme_style</string>
    <string name="key_map_follows_gps" translatable="false">map_follows_gps</string>
    <string name="key_map_latitude" translatable="false">map_latitude</string>
    <string name="key_map_longitude" translatable="false">map_longitude</string>
    <string name="key_map_zoom_level" translatable="false">map_zoom_level</string>
    <string name="key_map_tilt" translatable="false">map_tile</string>
    <string name="key_map_bearing" translatable="false">map_bearing</string>
    <string name="key_map_scale_bar_type" translatable="false">map_scale_bar_type</string>
    <string name="key_map_display_north_up" translatable="false">map_display_north_up</string>
    <string name="key_map_bounding_box_min_latitude" translatable="false">map_bounding_box_min_latitude</string>
    <string name="key_map_bounding_box_min_longitude" translatable="false">map_bounding_box_min_longitude</string>
    <string name="key_map_bounding_box_max_latitude" translatable="false">map_bounding_box_max_latitude</string>
    <string name="key_map_bounding_box_max_longitude" translatable="false">map_bounding_box_max_longitude</string>
    <string name="key_use_true_north" translatable="false">use_true_north</string>
    <string name="key_use_gps_bearing" translatable="false">use_gps_bearing</string>
    <string name="key_gps_bearing_speed" translatable="false">gps_bearing_speed</string>
    <string name="key_gps_bearing_duration" translatable="false">gps_bearing_duration</string>
    <string name="key_unit" translatable="false">unit</string>
    <string name="key_coordinate_display_format" translatable="false">coordinate_display_format</string>
    <string name="key_downloading_maps" translatable="false">downloading_maps</string>
    <string name="key_retryable_map_download_ids" translatable="false">retryable_map_download_ids</string>
    <string name="key_reported_failed_map_download_ids" translatable="false">reported_failed_map_download_ids</string>
    <string name="prefs_settings">Settings</string>
    <string name="prefs_reminders">Reminders</string>
    <string name="prefs_reminder_gps">GPS disabled</string>
    <string name="prefs_reminder_gps_on">Ask to turn GPS on</string>
    <string name="prefs_reminder_gps_off">Do not ask to turn GPS on</string>
    <string name="prefs_reminder_google_play_services">Google Play Services</string>
    <string name="prefs_reminder_google_play_services_on">Ask to resolve Google Play Services unavailability</string>
    <string name="prefs_reminder_google_play_services_off">Do not ask to resolve Google Play Services unavailability</string>
    <string name="prefs_map_preferences">Map Settings</string>
    <string name="prefs_map_source">Map Source</string>
    <string name="prefs_map_use_online_map">Use online map</string>
    <string name="prefs_map_offline_map">Offline map</string>
    <string name="download_map">DOWNLOAD MAP</string>
    <string name="prefs_map_online_map">Online map</string>
    <string name="prefs_map_render_theme">Render theme</string>
    <string name="prefs_map_use_internal_render_theme">Use internal render theme</string>
    <string name="prefs_map_internal_render_theme">Internal render theme</string>
    <string name="prefs_map_external_render_theme">External render theme</string>
    <string name="prefs_map_scale_bar_type">Scale bar type</string>
    <string name="prefs_map_display_mode">Display mode</string>
    <string name="prefs_map_north_up">Map displays north up</string>
    <string name="prefs_map_heading_up">Map displays heading up</string>
    <string name="scale_bar_none">None</string>
    <string name="scale_bar_metric">Metric</string>
    <string name="scale_bar_imperial">Imperial</string>
    <string name="scale_bar_nautical">Nautical</string>
    <string name="scale_bar_metric_and_imperial">Metric and Imperial</string>
    <string name="ok">@android:string/ok</string>
    <string name="edit">EDIT</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="never_ask_again">Never ask again</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="location_permission_rational">I need your GPS location information in order to be able to determine where you are and lead you to any waypoint or record/follow any tracks.\n\nDo want to set this permission up now?</string>
    <string name="fatal_error">Fatal Error</string>
    <string name="location_permission_is_required">Without access to your GPS location, this app is useless</string>
    <string name="waypoint_type_generic">Generic</string>
    <string name="waypoint_type_summit">Summit</string>
    <string name="waypoint_type_valley">Valley</string>
    <string name="waypoint_type_mountain_pass">Mountain pass</string>
    <string name="waypoint_type_water">Water</string>
    <string name="waypoint_type_food">Food</string>
    <string name="waypoint_type_danger">Danger</string>
    <string name="waypoint_type_first_aid">First Aid</string>
    <string name="waypoint_type_sprint">Sprint</string>
    <string name="waypoint_type_straight">Straight</string>
    <string name="waypoint_type_left">Left</string>
    <string name="waypoint_type_left_slight">Left Slight</string>
    <string name="waypoint_type_left_sharp">Left Sharp</string>
    <string name="waypoint_type_right">Right</string>
    <string name="waypoint_type_right_slight">Right Slight</string>
    <string name="waypoint_type_right_sharp">Right Sharp</string>
    <string name="waypoint_type_u_turn">U-turn</string>
    <string name="waypoint_type_residence">Residence</string>
    <string name="waypoint_type_lodging">Lodging</string>
    <string name="waypoint_type_parking">Parking</string>
    <string name="waypoint_type_station">Station</string>
    <string name="waypoint_type_attention">Attention</string>
    <string name="waypoint_type_information">Information</string>
    <string name="waypoint_type_viewpoint">Viewpoint</string>
    <string name="waypoint_type_sightseeing">Sightseeing</string>
    <string name="waypoint_type_barbecue">Barbecue</string>
    <string name="waypoint_type_camping_ground">Camping ground</string>
    <string name="waypoint_type_geocache">Geocache</string>
    <string name="waypoint_type_playground_zoo">Playground/zoo</string>
    <string name="waypoint_type_swimming_opportunities">Swimming opportunities</string>
    <string name="waypoint_type_service_station">Service station</string>
    <string name="initializing_database">Initializing database</string>
    <string name="init_database_failed">Database initialization failed.</string>
    <string name="migration_1_to_2">Migrating database from version 1 to version 2</string>
    <string name="enable_gps">Enable GPS?</string>
    <string name="menu_map_style">Map style</string>
    <string name="menu_lock_to_gps">Lock to gps\nYou can also long press on the map</string>
    <string name="menu_lock_to_gps_condensed">Lock to gps</string>
    <string name="menu_unlock_from_gps">Unlock from gps\nYou can also long press on the map</string>
    <string name="menu_unlock_from_gps_condensed">Unlock from gps</string>
    <string name="speed_label">Speed:</string>
    <string name="gps_is_disabled">GPS is disabled!</string>
    <string name="accuracy_label">Accuracy:</string>
    <string name="altitude_label">Altitude:</string>
    <string name="heading_label">Heading:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="time_label">Time:</string>
</resources>