<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_mapLockedToGps"
        android:enabled="true"
        android:icon="@drawable/ic_gps_fixed"
        android:title="@string/menu_unlock_from_gps"
        android:titleCondensed="@string/menu_unlock_from_gps_condensed"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_mapNotLockedToGps"
        android:enabled="true"
        android:icon="@drawable/ic_gps_not_fixed"
        android:title="@string/menu_lock_to_gps"
        android:titleCondensed="@string/menu_lock_to_gps_condensed"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_mapStyle"
        android:enabled="true"
        android:visible="false"
        android:title="@string/menu_map_style"
        app:showAsAction="never">

        <menu/>
    </item>
</menu>