<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/drawer_top">
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/vector_drawable_ic_file_download"
            android:title="@string/nav_import_tracks" />
        <item
            android:id="@+id/nav_login_register"
            android:icon="@drawable/vector_drawable_ic_login"
            android:title="@string/nav_login_register" />
        <item
            android:id="@+id/nav_gps_status"
            android:icon="@drawable/vector_drawable_ic_satellite"
            android:title="@string/nav_gps_status" />
    </group>

    <group android:id="@+id/drawer_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/vector_drawable_ic_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>
