<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    >

    <TextView
        android:id="@+id/ssd_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingEnd="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:text="@string/select_storage"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/ssd_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/device"
        app:layout_constraintEnd_toStartOf="@+id/freePlaceholder"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssd_title"/>

    <TextView
        android:id="@+id/freePlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/placeholder_128_5GB"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/totalPlaceholder"
        app:layout_constraintStart_toEndOf="@+id/ssd_device"
        app:layout_constraintTop_toTopOf="@+id/ssd_device"/>

    <TextView
        android:id="@+id/ssd_free"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/free"
        app:layout_constraintEnd_toEndOf="@+id/freePlaceholder"
        app:layout_constraintStart_toStartOf="@+id/freePlaceholder"
        app:layout_constraintTop_toTopOf="@+id/freePlaceholder"/>

    <TextView
        android:id="@+id/totalPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/placeholder_128_5GB"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/freePlaceholder"
        app:layout_constraintTop_toTopOf="@+id/freePlaceholder"/>

    <TextView
        android:id="@+id/ssd_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="@+id/totalPlaceholder"
        app:layout_constraintStart_toStartOf="@+id/totalPlaceholder"
        app:layout_constraintTop_toTopOf="@+id/totalPlaceholder"/>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssd_device"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ssd_recyclerView"
        style="@style/MyRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/ssd_title"
        app:layout_constraintStart_toStartOf="@+id/ssd_title"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:itemCount="3"
        tools:listitem="@layout/select_storage_row"/>

    <include
        layout="@layout/alert_dialog_button_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssd_recyclerView"/>

</android.support.constraint.ConstraintLayout>